--- a/assets/scss/sections/header/_header-menu.scss
+++ b/assets/scss/sections/header/_header-menu.scss
@@ -7,9 +7,17 @@
   align-items: center;
   padding: 25px 0;
 
-  gap: $gap 50px;
+  gap: $gap;
+
+
 
   @include lg {
     flex-direction: column;
+
+  }
+
+  @include xs {
+    flex-direction: column;
+    padding: 25px;
   }
 }
