--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -14,6 +14,8 @@ html {
 body {
   font-family: $font-family;
   font-size: $font-size-inherit;
+  overflow-wrap: break-word;
+  background-color: $color-white;
 }
 
 a {
