--- a/assets/scss/sections/header/_header-menu.scss
+++ b/assets/scss/sections/header/_header-menu.scss
@@ -3,21 +3,21 @@
 
 .header-menu {
   display: flex;
-
+  border-bottom: 1px solid $color-gray;
   align-items: center;
-  padding: 25px 0;
-
-  gap: $gap;
-
+  padding: 14px 0;
+  margin: 0 20px;
+  gap: $gap ;
 
 
   @include lg {
     flex-direction: column;
-
+    align-items: center;
   }
 
   @include xs {
     flex-direction: column;
     padding: 25px;
+    align-items: center;
   }
 }
