--- a/assets/scss/sections/header/_header.scss
+++ b/assets/scss/sections/header/_header.scss
@@ -2,6 +2,13 @@
 @use "../../mixins" as *;
 
 .header {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
   min-height: 100vh;
   background-color: $color-white;
+
+
 }
