--- a/assets/scss/sections/header/_header.scss
+++ b/assets/scss/sections/header/_header.scss
@@ -6,9 +6,8 @@
 
   display: flex;
   flex-direction: column;
-
+  width: 100%;
   min-height: 100vh;
   background-color: $color-white;
-
-
+  max-width: 1440px;
 }
