--- a/assets/scss/sections/header/_header-content.scss
+++ b/assets/scss/sections/header/_header-content.scss
@@ -6,7 +6,8 @@
   align-items: center;
   grid-template-areas: "ttl img" "dsc img" "act img" "nts img";
   row-gap: 20px;
-  margin-left: 44px;
+  margin: 0 73px;
+  margin-top: 2px;
 
   @include xl-min {
     padding-top: 126px;
@@ -17,7 +18,7 @@
   @include xl-lg {
     padding-top: 80px;
     padding-bottom: 80px;
-    grid-template-columns: 52% 1fr;
+    grid-template-columns: 50% 1fr;
   }
 
   @include lg {
@@ -26,6 +27,7 @@
     grid-template-areas: "ttl" "dsc" "img" "act" "nts";
     grid-template-columns: 1fr;
     justify-items: center;
+    margin: 0 30px;
   }
 
   @include sm {
@@ -33,6 +35,7 @@
     grid-template-columns: 1fr;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin: 0 30px;
   }
 
   &__title {
@@ -124,8 +127,9 @@
     }
 
     @include lg {
-      width: 50%;
+      width: 70%;
       margin-bottom: 20px;
     }
   }
+
 }
