--- a/assets/scss/sections/header/_header-menu.scss
+++ b/assets/scss/sections/header/_header-menu.scss
@@ -3,12 +3,15 @@
 
 .header-menu {
   display: flex;
-  border-bottom: 1px solid $color-gray;
+
   align-items: center;
   padding: 14px 0;
-  margin: 0 20px;
+  margin: 0 50px;
   gap: $gap ;
 
+  @include ul {
+    align-items: center;
+  }
 
   @include lg {
     flex-direction: column;
@@ -20,4 +23,5 @@
     padding: 25px;
     align-items: center;
   }
+
 }
