--- a/assets/scss/sections/header/_navbar.scss
+++ b/assets/scss/sections/header/_navbar.scss
@@ -5,7 +5,6 @@
   flex-grow: 1;
   justify-self: start;
 
-
   &__list {
     display: flex;
     flex-wrap: wrap;
@@ -14,8 +13,6 @@
     padding: 0 21px;
     gap: 38px;
     list-style: none;
-
-
 
     @include xl {
       gap: $gap-md;
@@ -66,4 +63,40 @@
     }
 
   }
+
+  &::after {
+    position: absolute;
+    top: 95px;
+    left: 50%;
+
+    width: 100vw;
+    height: 1px;
+    margin-left: -50vw;
+
+    content: "";
+
+    background-color: $color-gray;
+
+    @include lg {
+      top: 18%;
+    }
+
+    @include md {
+      top: 20%;
+    }
+
+    @include sm {
+      top: 30%;
+    }
+
+    @include xx {
+      top: 25%;
+    }
+
+
+    @include ux {
+      top: 32%;
+    }
+  }
+
 }
