--- a/assets/scss/presets/_skins.scss
+++ b/assets/scss/presets/_skins.scss
@@ -1,5 +1,6 @@
 $color-primary: #000000;
 $color-accent: #ff6336;
+$color-light-accent: #ff9c7d;
 $color-light: #fff8e4;
 $color-white: #ffffff;
 $color-gray: #cccccc;
