--- a/assets/scss/sections/header/_navbar.scss
+++ b/assets/scss/sections/header/_navbar.scss
@@ -24,6 +24,10 @@
       gap: $gap;
     }
 
+    @include md {
+      margin: 0;
+    }
+
     @include sm {
       gap: 10px;
       margin: 0;
@@ -64,39 +68,5 @@
 
   }
 
-  &::after {
-    position: absolute;
-    top: 95px;
-    left: 50%;
-
-    width: 100vw;
-    height: 1px;
-    margin-left: -50vw;
-
-    content: "";
-
-    background-color: $color-gray;
-
-    @include lg {
-      top: 18%;
-    }
-
-    @include md {
-      top: 20%;
-    }
-
-    @include sm {
-      top: 30%;
-    }
-
-    @include xx {
-      top: 25%;
-    }
-
-
-    @include ux {
-      top: 32%;
-    }
-  }
 
 }
