--- a/assets/scss/sections/header/_header.scss
+++ b/assets/scss/sections/header/_header.scss
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
+  // min-height: 100vh;
   background-color: $color-white;
   max-width: 1440px;
-
+  border-bottom: 1px solid $color-gray-light;
 
 }
