--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -17,7 +17,7 @@ body {
   overflow-wrap: break-word;
   background-color: $color-white;
   overflow-x: hidden;
-  width: 1440px;
+  // width: 1440px;
 }
 
 a {
