--- a/assets/scss/sections/main/_index.scss
+++ b/assets/scss/sections/main/_index.scss
@@ -2,3 +2,9 @@
 @forward "brands";
 @forward "main";
 @forward "features";
+@forward "facilities";
+@forward "boost";
+@forward "review";
+@forward "rating";
+@forward "integration";
+@forward "localization";
