--- a/assets/scss/sections/main/features/_work.scss
+++ b/assets/scss/sections/main/features/_work.scss
@@ -90,7 +90,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    width: 518px;
+    // width: 518px;
 
     @include lg {
       width: auto;
