--- a/assets/scss/sections/header/_header.scss
+++ b/assets/scss/sections/header/_header.scss
@@ -3,13 +3,13 @@
 
 .header {
   position: relative;
-
+  // z-index: 100;
   display: flex;
   flex-direction: column;
   width: 100%;
   // min-height: 100vh;
   background-color: $color-white;
-  max-width: 1440px;
+  // max-width: 1440px;
   border-bottom: 1px solid $color-gray-light;
 
 }
