--- a/assets/scss/sections/main/review/_review.scss
+++ b/assets/scss/sections/main/review/_review.scss
@@ -4,7 +4,7 @@
 .review {
   background-color: $color-bg-secondary-1;
   padding-top: 45px;
-  margin-top: 5px;
+  margin-top: 0;
   padding-bottom: 105px;
 
   @include sm {
