--- a/assets/scss/sections/main/facilities/_facility-item.scss
+++ b/assets/scss/sections/main/facilities/_facility-item.scss
@@ -9,6 +9,7 @@
   text-align: center;
   gap: 20px;
 
+
   &__title {
     font-weight: 600;
     font-size: 25px;
@@ -21,6 +22,7 @@
     font-size: 18px;
     line-height: 1.39;
     margin: 0;
+    max-width: 330px;
   }
 
   &__picture {
