--- a/assets/scss/sections/main/integration/_integration-content.scss
+++ b/assets/scss/sections/main/integration/_integration-content.scss
@@ -41,10 +41,28 @@
 
     @include xl {
       font-size: 20px;
+      max-width: 790px;
+    }
+
+    @include lg {
+      max-width: 850px;
+    }
+
+    @include sm {
+      max-width: 450px;
+    }
+
+    @include xs {
+      max-width: 320px;
     }
 
     @include xx {
+      max-width: 290px;
       font-size: 15px;
+    }
+
+    @include ux {
+      max-width: 230px;
     }
 
 
