--- a/assets/scss/sections/footer/footer-info/_footer-info.scss
+++ b/assets/scss/sections/footer/footer-info/_footer-info.scss
@@ -2,12 +2,28 @@
 @use "../../../mixins" as *;
 
 .footer-info {
-  display: flex;
+  display: grid;
   justify-content: space-between;
-  gap: 40px;
-  padding-bottom: 95px;
 
-  @include xl {
-    flex-wrap: wrap;
+  padding-bottom: 90px;
+
+  border-bottom: 1px solid $color-primary;
+
+  gap: $gap;
+  grid-template-areas: "std prd spt cmp lgl";
+
+  @include lg {
+    grid-template-areas: "std prd spt" "std cmp lgl";
+  }
+
+  @include md {
+    justify-content: center;
+    row-gap: 50px;
+    grid-template-areas: "std std" "prd spt" "cmp lgl";
+  }
+
+  @include xx {
+    row-gap: 40px;
+    column-gap: 30px;
   }
 }
