--- a/assets/scss/sections/footer/footer-info/_index.scss
+++ b/assets/scss/sections/footer/footer-info/_index.scss
@@ -1,3 +1,6 @@
 @forward "footer-info";
 @forward "study";
-@forward "footer-menu";
+@forward "product";
+@forward "support";
+@forward "company";
+@forward "legal";
