--- a/assets/scss/sections/main/features/_work.scss
+++ b/assets/scss/sections/main/features/_work.scss
@@ -29,8 +29,8 @@
 
 
   &__content {
-    max-width: 493px;
-    margin-right: 30px;
+    max-width: 540px;
+    // margin-right: 30px;
     display: flex;
     flex-direction: column;
 
@@ -38,6 +38,7 @@
     @include xl {
       text-align: center;
       margin-right: 0;
+      max-width: 493px;
     }
 
     @include sm {
@@ -114,6 +115,11 @@
   }
 
   &__image {
+
+    @include xl {
+      width: 100%;
+    }
+
     @include md {
       width: 90%;
     }
