--- a/assets/scss/sections/main/_hero.scss
+++ b/assets/scss/sections/main/_hero.scss
@@ -63,10 +63,12 @@
     }
 
     @include sm {
+      max-width: 350px;
       margin-top: 25px;
     }
 
     @include xs {
+      max-width: 250px;
       margin-top: 10px;
     }
   }
@@ -94,8 +96,13 @@
     }
 
     @include sm {
+      max-width: 350px;
       padding-top: $gap-sm;
       padding-bottom: $gap-sm;
+    }
+
+    @include xs {
+      max-width: 250px;
     }
   }
 
